--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"json-server --watch db.json --config json-server.json\"  \"ng serve --proxy-config proxy.conf.json\"",
+    "start": "concurrently \"json-server --watch db.js --config json-server.json\"  \"ng serve --proxy-config proxy.conf.json\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
