--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "concurrently \"json-server --watch db.js --config json-server.json\"  \"ng serve --proxy-config proxy.conf.json\"",
     "build": "ng build",
@@ -12,43 +13,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.7",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "^4.4.7",
-    "@angular/core": "^4.4.7",
-    "@angular/forms": "^4.4.7",
-    "@angular/http": "^4.4.7",
-    "@angular/platform-browser": "^4.4.7",
-    "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/router": "^4.4.7",
+    "@angular/animations": "^9.1.3",
+    "@angular/common": "^9.1.3",
+    "@angular/compiler": "^9.1.3",
+    "@angular/core": "^9.1.3",
+    "@angular/forms": "^9.1.3",
+    "@angular/platform-browser": "^9.1.3",
+    "@angular/platform-browser-dynamic": "^9.1.3",
+    "@angular/platform-server": "^9.1.3",
+    "@angular/router": "^9.1.3",
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.11",
     "moment": "^2.24.0",
-    "rxjs": "^5.5.12",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.8",
-    "@angular/compiler-cli": "^4.4.7",
-    "@angular/language-service": "^4.4.7",
+    "@angular-devkit/build-angular": "~0.901.3",
+    "@angular/cli": "9.1.3",
+    "@angular/compiler-cli": "^9.1.3",
+    "@angular/language-service": "^9.1.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^6.0.118",
-    "codelyzer": "^3.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "concurrently": "^3.6.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "json-server": "^0.12.2",
-    "karma": "~1.7.0",
+    "json-server": "^0.16.1",
+    "karma": "~5.0.2",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "less": "^3.10.3",
-    "protractor": "~5.1.2",
+    "protractor": "~5.4.4",
+    "rxjs-tslint": "^0.1.8",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "3.8.3"
   }
 }
